--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "chai": "^1.9.1",
     "mocha": "^1.18.2",
     "supertest": "^0.12.0"
+  },
+  "dependencies": {
+    "methods": "^0.1.0"
   }
 }
