--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "supertest": "^0.12.0"
   },
   "dependencies": {
-    "methods": "^0.1.0"
+    "methods": "^0.1.0",
+    "mime": "^1.2.11",
+    "accepts": "^1.0.1"
   }
 }
