--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "methods": "^0.1.0",
     "mime": "^1.2.11",
-    "accepts": "^1.0.1"
+    "accepts": "^1.0.1",
+    "buffer-crc32": "^0.2.1"
   }
 }
